appId: com.anonymous.weatherapp
---
- launchApp:
    clearState: true
- assertVisible:
    id: 'sign-in-email-input'
- tapOn:
    id: 'sign-in-email-input'
- inputText: ${TEST_USER_EMAIL}
- tapOn:
    id: 'sign-in-password-input'
- inputText: 'WrongPassword123!'
- tapOn:
    id: 'sign-in-submit-button'
- assertVisible:
    text: 'Sign in failed'
- assertVisible:
    text: 'Incorrect email or password.'
- tapOn: 'OK'
- assertVisible:
    id: 'sign-in-email-input'
- assertVisible:
    id: 'sign-in-submit-button'
