appId: com.anonymous.weatherapp
---
- tapOn:
    id: 'sign-in-email-input'
- inputText: ${TEST_USER_EMAIL}
- tapOn:
    id: 'sign-in-password-input'
- inputText: ${TEST_USER_PASSWORD}
- tapOn:
    id: 'sign-in-submit-button'
